added local language

--- a/assets/languages/hi.json
+++ b/assets/languages/hi.json
@@ -1,8 +1,9 @@
 {
   "appTitle": "आरोग्य विश्वास",
-  "reportSummarization": "रिपोर्ट सारांश",
-  "reportDescription": "अपनी मेडिकल रिपोर्ट का सरल भाषा में सारांश प्राप्त करें",
-  "medicalRecordStorage": "चिकित्सा रिकॉर्ड संग्रहण",
+  "chooseLanguage": "भाषा चुनें",
+  "reportSummarization": "एआई द्वारा रिपोर्ट सारांश",
+  "reportDescription": "अपनी मेडिकल रिपोर्ट अपलोड करें और अपनी पसंदीदा भाषा में आसान सारांश प्राप्त करें",
+  "medicalRecordStorage": "मेडिकल रिकॉर्ड संग्रहण",
   "medicalRecordDescription": "अपनी मेडिकल रिपोर्ट को सुरक्षित रूप से सहेजें और कभी भी एक्सेस करें",
   "schemeChecker": "सरकारी योजना पात्रता जांचकर्ता",
   "schemeDescription": "जांचें कि क्या आप सरकार द्वारा प्रदान की जाने वाली स्वास्थ्य योजनाओं के लिए योग्य हैं",
@@ -13,5 +14,21 @@
   "volunteerSupport": "स्वयंसेवक सहायता प्रणाली",
   "volunteerDescription": "प्रशिक्षित सामुदायिक स्वास्थ्य स्वयंसेवकों से मदद लें",
   "localVolunteer": "स्थानीय स्वयंसेवक कनेक्शन",
-  "localVolunteerDescription": "तत्काल सहायता के लिए अपने गांव या आस-पास के क्षेत्रों के स्वास्थ्य स्वयंसेवकों का पता लगाएं और संपर्क करें"
+  "localVolunteerDescription": "तत्काल सहायता के लिए अपने गांव या आस-पास के क्षेत्रों के स्वास्थ्य स्वयंसेवकों का पता लगाएं और संपर्क करें",
+  "summarizeMedicalReport": "मेडिकल रिपोर्ट का सारांश दें",
+  "generatingReportSummary": "रिपोर्ट सारांश बनाया जा रहा है...",
+  "sendMessage": "एक संदेश भेजें",
+  "logout": "लॉगआउट",
+  "languageSelection": "भाषा चयन",
+  "aiPoweredReportSummary": "एआई द्वारा रिपोर्ट सारांश",
+  "aiPoweredReportDescription": "अपनी मेडिकल रिपोर्ट अपलोड करें और एआई द्वारा सरल भाषा में सारांश प्राप्त करें",
+  "uploadMedicalReport": "मेडिकल रिपोर्ट अपलोड करें",
+  "selectLanguage": "भाषा चुनें",
+  "languageChanged": "भाषा बदल दी गई है",
+  "errorOccurred": "त्रुटि हुई है",
+  "tryAgain": "पुनः प्रयास करें",
+  "noInternet": "इंटरनेट कनेक्शन नहीं है",
+  "checkConnection": "कनेक्शन जांचें",
+  "welcomeMessage": "आरोग्य विश्वास में आपका स्वागत है",
+  "getStarted": "शुरू करें"
 }
