--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -13,5 +13,13 @@
   "volunteerSupport": "Volunteer Support System",
   "volunteerDescription": "Seek help from trained community health volunteers",
   "localVolunteer": "Local Volunteer Connection",
-  "localVolunteerDescription": "Locate and contact healthcare volunteers from your village or nearby areas for immediate assistance"
+  "localVolunteerDescription": "Locate and contact healthcare volunteers from your village or nearby areas for immediate assistance",
+  "title1":"Welcome to Aarogya Vishwas Your Personal Medical Assistant",
+  "title2":"Get Offline First Aid Guidance When You Need It Most",
+  "title3":"Understand Your Medical Reports in Your Own Language",
+  "get_started": "Get Started",
+  "by_continuing": "By continuing, you agree that you have read and accept our",
+  "terms_and_conditions": "T&Cs",
+  "privacy_policy": "Privacy Policy"
 }
+
