--- a/assets/languages/mr.json
+++ b/assets/languages/mr.json
@@ -13,6 +13,13 @@
     "volunteerSupport": "स्वयंसेवक सहाय्य प्रणाली",
     "volunteerDescription": "प्रशिक्षित समुदाय आरोग्य स्वयंसेवकांकडून मदत मिळवा",
     "localVolunteer": "स्थानिक स्वयंसेवक कनेक्शन",
-    "localVolunteerDescription": "तात्काळ मदतीसाठी आपल्या गावातील किंवा जवळपासच्या भागातील आरोग्य स्वयंसेवकांचा शोध घ्या आणि संपर्क साधा"
+    "localVolunteerDescription": "तात्काळ मदतीसाठी आपल्या गावातील किंवा जवळपासच्या भागातील आरोग्य स्वयंसेवकांचा शोध घ्या आणि संपर्क साधा",
+    "title1": "तुमच्या वैद्यकीय अहवालांचा तुमच्या भाषेत अर्थ समजा",
+    "title2": "जेव्हा तुम्हाला सर्वाधिक गरज असेल तेव्हा ऑफलाइन प्रथमोपचार मार्गदर्शन मिळवा",
+    "title3": "आरोग्य विश्वास मध्ये तुमचे स्वागत आहे, तुमचा वैयक्तिक वैद्यकीय सहाय्यक",
+    "get_started": "सुरू करा",
+    "by_continuing": "सुरू ठेवण्यासाठी, आपण आमच्या अटी व शर्ती वाचल्या आहेत आणि त्यांना मान्य करता",
+    "terms_and_conditions": "अटी व शर्ती",
+    "privacy_policy": "गोपनीयता धोरण"
   }
   
