--- a/assets/languages/bn.json
+++ b/assets/languages/bn.json
@@ -13,6 +13,13 @@
     "volunteerSupport": "স্বেচ্ছাসেবক সহায়তা সিস্টেম",
     "volunteerDescription": "প্রশিক্ষিত কমিউনিটি স্বাস্থ্য স্বেচ্ছাসেবকদের কাছ থেকে সাহায্য নিন",
     "localVolunteer": "স্থানীয় স্বেচ্ছাসেবক সংযোগ",
-    "localVolunteerDescription": "তাৎক্ষণিক সহায়তার জন্য আপনার গ্রাম বা আশেপাশের এলাকার স্বাস্থ্যসেবা স্বেচ্ছাসেবকদের খুঁজুন এবং যোগাযোগ করুন"
+    "localVolunteerDescription": "তাৎক্ষণিক সহায়তার জন্য আপনার গ্রাম বা আশেপাশের এলাকার স্বাস্থ্যসেবা স্বেচ্ছাসেবকদের খুঁজুন এবং যোগাযোগ করুন",
+    "title1": "আপনার মেডিকেল রিপোর্ট আপনার নিজের ভাষায় বুঝুন",
+    "title2": "যখন আপনার সবচেয়ে বেশি প্রয়োজন তখন অফলাইন প্রাথমিক চিকিৎসা নির্দেশিকা পান",
+    "title3": "আরোগ্য বিশ্বাস-এ আপনাকে স্বাগতম, আপনার ব্যক্তিগত মেডিকেল সহায়ক",
+    "get_started": "শুরু করুন",
+    "by_continuing": "চালিয়ে যেতে, আপনি সম্মত হন যে আপনি আমাদের শর্তাবলী পড়েছেন এবং গ্রহণ করেছেন",
+    "terms_and_conditions": "শর্তাবলী",
+    "privacy_policy": "গোপনীয়তা নীতি"
   }
   
