added localization in govt page

--- a/assets/languages/bn.json
+++ b/assets/languages/bn.json
@@ -30,6 +30,42 @@
   "upload_error": "ফাইল আপলোড করতে ত্রুটি",
   "file_deleted": "ফাইল সফলভাবে মুছে ফেলা হয়েছে",
   "delete_error": "ফাইল মুছতে ত্রুটি",
-  "error_opening_file": "ফাইল খুলতে ত্রুটি"
+  "error_opening_file": "ফাইল খুলতে ত্রুটি",
+  "governmentSchemes": "সরকারি স্বাস্থ্য প্রকল্প",
+  "searchSchemes": "প্রকল্প খুঁজুন",
+  "allCategories": "সব",
+  "healthCategory": "স্বাস্থ্য",
+  "womenCategory": "মহিলা",
+  "childrenCategory": "শিশু",
+  "eligibilityLabel": "যোগ্যতা",
+  "couldNotOpenLink": "লিঙ্ক খোলা যায়নি",
+  "clearSearch": "অনুসন্ধান মুছুন",
+  "ayushmanBharat": "আয়ুষ্মান ভারত যোজনা",
+  "nationalHealth": "জাতীয় স্বাস্থ্য মিশন",
+  "matruVandana": "প্রধানমন্ত্রী মাতৃ বন্দনা যোজনা",
+  "jananiShishu": "জননী শিশু সুরক্ষা কর্মসূচি",
+  "balSwasthya": "রাষ্ট্রীয় বাল স্বাস্থ্য কর্মসূচি",
+  "missionIndradhanush": "মিশন ইন্দ্রধনুষ",
+  "surakshitMatritva": "প্রধানমন্ত্রী সুরক্ষিত মাতৃত্ব অভিযান",
+  "nutritionMission": "জাতীয় পুষ্টি মিশন (পোষণ অভিযান)",
+  "pmjay": "প্রধানমন্ত্রী জন আরোগ্য যোজনা (পিএম-জেএওয়াই)",
+  "ayushmanBharatDesc": "দ্বিতীয় ও তৃতীয় স্তরের হাসপাতালে ভর্তির জন্য প্রতি পরিবারের জন্য বার্ষিক ₹5 লক্ষ পর্যন্ত স্বাস্থ্য কভারেজ প্রদান করে।",
+  "nationalHealthDesc": "গ্রামীণ ও শহুরে জনগোষ্ঠীর জন্য সুলভ, সাশ্রয়ী ও মানসম্মত স্বাস্থ্যসেবা প্রদানের লক্ষ্য।",
+  "matruVandanaDesc": "প্রথম জীবিত সন্তানের জন্য গর্ভবতী ও স্তন্যদায়ী মায়েদের আর্থিক সহায়তা প্রদান।",
+  "jananiShishuDesc": "গর্ভবতী মহিলা ও অসুস্থ নবজাতকদের জন্য বিনামূল্যে ও নগদবিহীন প্রসব, সিজারিয়ান ও প্রসবোত্তর সেবা।",
+  "balSwasthyaDesc": "শিশুদের জন্য ব্যাপক স্বাস্থ্যসেবা, রোগ প্রতিরোধ সহ।",
+  "missionIndradhanushDesc": "টিকা প্রতিরোধযোগ্য রোগের বিরুদ্ধে শিশু ও গর্ভবতী মহিলাদের টিকাদান।",
+  "surakshitMatritvaDesc": "প্রতি মাসের ৯ তারিখে গর্ভবতী মহিলাদের বিনামূল্যে প্রসবপূর্ব সেবা প্রদান।",
+  "nutritionMissionDesc": "শিশু, গর্ভবতী মহিলা ও স্তন্যদায়ী মায়েদের পুষ্টি উন্নয়নের লক্ষ্য।",
+  "pmjayDesc": "দ্বিতীয় ও তৃতীয় স্তরের হাসপাতালে ভর্তির জন্য প্রতি পরিবারের জন্য বার্ষিক ₹5 লক্ষ পর্যন্ত স্বাস্থ্য বীমা কভারেজ।",
+
+  "bplFamilies": "দারিদ্র্যসীমার নীচে বসবাসকারী পরিবার।",
+  "allCitizens": "সকল নাগরিক, বিশেষত মহিলা ও শিশু।",
+  "pregnantWomen": "গর্ভবতী ও স্তন্যদায়ী মায়েরা।",
+  "pregnantAndNewborn": "সকল গর্ভবতী মহিলা ও অসুস্থ নবজাতক।",
+  "children018": "০-১৮ বছর বয়সী শিশু।",
+  "childrenAndPregnant": "শিশু ও গর্ভবতী মহিলা।",
+  "pregnantWomenOnly": "গর্ভবতী মহিলা।",
+  "nutritionBeneficiaries": "শিশু, গর্ভবতী মহিলা ও স্তন্যদায়ী মা।"
   }
   
