--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -30,6 +30,41 @@
   "upload_error": "Error uploading file",
   "file_deleted": "File deleted successfully",
   "delete_error": "Error deleting file",
-  "error_opening_file": "Error opening file"
+  "error_opening_file": "Error opening file",
+  "governmentSchemes": "Government Health Schemes",
+  "searchSchemes": "Search schemes",
+  "allCategories": "All",
+  "healthCategory": "Health",
+  "womenCategory": "Women",
+  "childrenCategory": "Children",
+  "eligibilityLabel": "Eligibility",
+  "couldNotOpenLink": "Could not open link",
+  "clearSearch": "Clear search",
+  "ayushmanBharat": "Ayushman Bharat Yojana",
+  "nationalHealth": "National Health Mission",
+  "matruVandana": "Pradhan Mantri Matru Vandana Yojana",
+  "jananiShishu": "Janani Shishu Suraksha Karyakram",
+  "balSwasthya": "Rashtriya Bal Swasthya Karyakram",
+  "missionIndradhanush": "Mission Indradhanush",
+  "surakshitMatritva": "Pradhan Mantri Surakshit Matritva Abhiyan",
+  "nutritionMission": "National Nutrition Mission (Poshan Abhiyaan)",
+  "pmjay": "Pradhan Mantri Jan Arogya Yojana (PM-JAY)",
+  "ayushmanBharatDesc": "Provides health coverage of up to ₹5 lakh per family per year for secondary and tertiary care hospitalization.",
+  "nationalHealthDesc": "Aims to provide accessible, affordable, and quality healthcare to rural and urban populations.",
+  "matruVandanaDesc": "Provides financial assistance to pregnant and lactating women for their first living child.",
+  "jananiShishuDesc": "Ensures free and cashless delivery, C-section, and postnatal care for pregnant women and sick newborns.",
+  "balSwasthyaDesc": "Provides comprehensive healthcare services for children, including early detection of diseases.",
+  "missionIndradhanushDesc": "Aims to immunize children and pregnant women against vaccine-preventable diseases.",
+  "surakshitMatritvaDesc": "Provides free antenatal services to pregnant women on the 9th of every month.",
+  "nutritionMissionDesc": "Aims to improve nutritional outcomes for children, pregnant women, and lactating mothers.",
+  "pmjayDesc": "Provides health insurance coverage of up to ₹5 lakh per family per year for secondary and tertiary care hospitalization.",
+  "bplFamilies": "Families living below the poverty line.",
+  "allCitizens": "All citizens, especially women and children.",
+  "pregnantWomen": "Pregnant women and lactating mothers.",
+  "pregnantAndNewborn": "All pregnant women and sick newborns.",
+  "children018": "Children aged 0-18 years.",
+  "childrenAndPregnant": "Children and pregnant women.",
+  "pregnantWomenOnly": "Pregnant women.",
+  "nutritionBeneficiaries": "Children, pregnant women, and lactating mothers."
 }
 
