--- a/assets/languages/mr.json
+++ b/assets/languages/mr.json
@@ -30,6 +30,43 @@
     "upload_error": "फाईल अपलोड करताना त्रुटी",
     "file_deleted": "फाईल यशस्वीरित्या हटवली",
     "delete_error": "फाईल हटवताना त्रुटी",
-    "error_opening_file": "फाईल उघडताना त्रुटी"
+    "error_opening_file": "फाईल उघडताना त्रुटी",
+    "governmentSchemes": "सरकारी आरोग्य योजना",
+    "searchSchemes": "योजना शोधा",
+    "allCategories": "सर्व",
+    "healthCategory": "आरोग्य",
+    "womenCategory": "महिला",
+    "childrenCategory": "मुले",
+    "eligibilityLabel": "पात्रता",
+    "couldNotOpenLink": "लिंक उघडता आला नाही",
+    "clearSearch": "शोध साफ करा",
+    "ayushmanBharat": "आयुष्मान भारत योजना",
+    "nationalHealth": "राष्ट्रीय आरोग्य मिशन",
+    "matruVandana": "प्रधानमंत्री मातृ वंदना योजना",
+    "jananiShishu": "जननी शिशु सुरक्षा कार्यक्रम",
+    "balSwasthya": "राष्ट्रीय बाल आरोग्य कार्यक्रम",
+    "missionIndradhanush": "मिशन इंद्रधनुष",
+    "surakshitMatritva": "प्रधानमंत्री सुरक्षित मातृत्व अभियान",
+    "nutritionMission": "राष्ट्रीय पोषण मिशन (पोषण अभियान)",
+    "pmjay": "प्रधानमंत्री जन आरोग्य योजना (पीएम-जेएवाय)",
+    "ayushmanBharatDesc": "दुय्यम आणि तृतीय रुग्णालय भरतीसाठी प्रति कुटुंब प्रति वर्ष ₹5 लाख पर्यंत आरोग्य कवरेज प्रदान करते.",
+    "nationalHealthDesc": "ग्रामीण आणि शहरी लोकसंख्येला सुलभ, परवडणारी आणि दर्जेदार आरोग्यसेवा प्रदान करण्याचे उद्दिष्ट.",
+    "matruVandanaDesc": "गर्भवती आणि स्तनदा महिलांना त्यांच्या पहिल्या जिवंत मुलासाठी आर्थिक सहाय्य.",
+    "jananiShishuDesc": "गर्भवती महिला आणि आजारी नवजात शिशुंसाठी मोफत आणि रोख रक्कमविरहित प्रसूती, सिझेरियन आणि प्रसूतीनंतरची काळजी.",
+    "balSwasthyaDesc": "मुलांसाठी सर्वसमावेशक आरोग्यसेवा, रोगांचे लवकर निदान सह.",
+    "missionIndradhanushDesc": "लस प्रतिबंधित रोगांविरुद्ध मुले आणि गर्भवती महिलांचे लसीकरण.",
+    "surakshitMatritvaDesc": "दर महिन्याच्या ९ तारखेला गर्भवती महिलांना मोफत प्रसूतीपूर्व सेवा.",
+    "nutritionMissionDesc": "मुले, गर्भवती महिला आणि स्तनदा मातांच्या पोषण परिणामांमध्ये सुधारणा करण्याचे उद्दिष्ट.",
+    "pmjayDesc": "दुय्यम आणि तृतीय रुग्णालय भरतीसाठी प्रति कुटुंब प्रति वर्ष ₹5 लाख पर्यंत आरोग्य विमा कवरेज.",
+  
+    "bplFamilies": "दारिद्र्य रेषेखालील कुटुंबे.",
+    "allCitizens": "सर्व नागरिक, विशेषतः महिला आणि मुले.",
+    "pregnantWomen": "गर्भवती आणि स्तनदा माता.",
+    "pregnantAndNewborn": "सर्व गर्भवती महिला आणि आजारी नवजात बालके.",
+    "children018": "0-18 वर्षे वयोगटातील मुले.",
+    "childrenAndPregnant": "मुले आणि गर्भवती महिला.",
+    "pregnantWomenOnly": "गर्भवती महिला.",
+    "nutritionBeneficiaries": "मुले, गर्भवती महिला आणि स्तनदा माता."  
+  
   }
   
