--- a/assets/languages/hi.json
+++ b/assets/languages/hi.json
@@ -50,5 +50,40 @@
   "upload_error": "फ़ाइल अपलोड करने में त्रुटि",
   "file_deleted": "फ़ाइल सफलतापूर्वक हटा दी गई",
   "delete_error": "फ़ाइल हटाने में त्रुटि",
-  "error_opening_file": "फ़ाइल खोलने में त्रुटि"
+  "error_opening_file": "फ़ाइल खोलने में त्रुटि",
+  "governmentSchemes": "सरकारी स्वास्थ्य योजनाएं",
+  "searchSchemes": "योजनाएं खोजें",
+  "allCategories": "सभी",
+  "healthCategory": "स्वास्थ्य",
+  "womenCategory": "महिलाएं",
+  "childrenCategory": "बच्चे",
+  "eligibilityLabel": "पात्रता",
+  "couldNotOpenLink": "लिंक नहीं खुल सका",
+  "clearSearch": "खोज साफ़ करें",
+  "ayushmanBharat": "आयुष्मान भारत योजना",
+  "nationalHealth": "राष्ट्रीय स्वास्थ्य मिशन",
+  "matruVandana": "प्रधानमंत्री मातृ वंदना योजना",
+  "jananiShishu": "जननी शिशु सुरक्षा कार्यक्रम",
+  "balSwasthya": "राष्ट्रीय बाल स्वास्थ्य कार्यक्रम",
+  "missionIndradhanush": "मिशन इंद्रधनुष",
+  "surakshitMatritva": "प्रधानमंत्री सुरक्षित मातृत्व अभियान",
+  "nutritionMission": "राष्ट्रीय पोषण मिशन (पोशन अभियान)",
+  "pmjay": "प्रधानमंत्री जन आरोग्य योजना (पीएम-जेएवाई)",
+  "ayushmanBharatDesc": "द्वितीयक और तृतीयक देखभाल अस्पताल में भर्ती के लिए प्रति परिवार प्रति वर्ष ₹5 लाख तक का स्वास्थ्य कवरेज प्रदान करता है।",
+  "nationalHealthDesc": "ग्रामीण और शहरी आबादी को सुलभ, किफायती और गुणवत्तापूर्ण स्वास्थ्य सेवा प्रदान करने का लक्ष्य है।",
+  "matruVandanaDesc": "गर्भवती और स्तनपान कराने वाली महिलाओं को उनके पहले जीवित बच्चे के लिए वित्तीय सहायता प्रदान करता है।",
+  "jananiShishuDesc": "गर्भवती महिलाओं और बीमार नवजात शिशुओं के लिए मुफ्त और कैशलेस डिलीवरी, सी-सेक्शन और प्रसवोत्तर देखभाल सुनिश्चित करता है।",
+  "balSwasthyaDesc": "बच्चों के लिए व्यापक स्वास्थ्य सेवाएं प्रदान करता है, जिसमें बीमारियों का शीघ्र पता लगाना शामिल है।",
+  "missionIndradhanushDesc": "वैक्सीन से बचाव योग्य बीमारियों के खिलाफ बच्चों और गर्भवती महिलाओं का टीकाकरण करने का लक्ष्य है।",
+  "surakshitMatritvaDesc": "हर महीने की 9 तारीख को गर्भवती महिलाओं को मुफ्त प्रसव पूर्व सेवाएं प्रदान करता है।",
+  "nutritionMissionDesc": "बच्चों, गर्भवती महिलाओं और स्तनपान कराने वाली माताओं के लिए पोषण परिणामों में सुधार का लक्ष्य है।",
+  "pmjayDesc": "द्वितीयक और तृतीयक देखभाल अस्पताल में भर्ती के लिए प्रति परिवार प्रति वर्ष ₹5 लाख तक का स्वास्थ्य बीमा कवरेज प्रदान करता है।",
+  "bplFamilies": "गरीबी रेखा से नीचे रहने वाले परिवार।",
+  "allCitizens": "सभी नागरिक, विशेषकर महिलाएं और बच्चे।",
+  "pregnantWomen": "गर्भवती और स्तनपान कराने वाली महिलाएं।",
+  "pregnantAndNewborn": "सभी गर्भवती महिलाएं और बीमार नवजात शिशु।",
+  "children018": "0-18 वर्ष के बच्चे।",
+  "childrenAndPregnant": "बच्चे और गर्भवती महिलाएं।",
+  "pregnantWomenOnly": "गर्भवती महिलाएं।",
+  "nutritionBeneficiaries": "बच्चे, गर्भवती महिलाएं और स्तनपान कराने वाली माताएं।"
 }
