--- a/assets/languages/bn.json
+++ b/assets/languages/bn.json
@@ -10,8 +10,8 @@
     "hospitalDescription": "সরাসরি কল করার সুবিধা সহ কাছাকাছি হাসপাতাল এবং জরুরি পরিষেবা খুঁজুন",
     "firstAidGuide": "অফলাইন প্রাথমিক চিকিৎসা গাইড",
     "firstAidDescription": "পোড়া, ফ্র্যাকচার, হার্ট অ্যাটাক ইত্যাদি জরুরি অবস্থার জন্য প্রি-লোডেড জীবন রক্ষাকারী নির্দেশনা",
-    "volunteerSupport": "স্বেচ্ছাসেবক সহায়তা সিস্টেম",
-    "volunteerDescription": "প্রশিক্ষিত কমিউনিটি স্বাস্থ্য স্বেচ্ছাসেবকদের কাছ থেকে সাহায্য নিন",
+    "volunteerSupport": "জরুরি ডাক্তার পরামর্শ",
+    "volunteerDescription": "এখানে ডাক্তারদের সঙ্গে দ্রুত পরামর্শ করুন এবং জরুরি সহায়তা পান।",
     "localVolunteer": "স্থানীয় স্বেচ্ছাসেবক সংযোগ",
     "localVolunteerDescription": "তাৎক্ষণিক সহায়তার জন্য আপনার গ্রাম বা আশেপাশের এলাকার স্বাস্থ্যসেবা স্বেচ্ছাসেবকদের খুঁজুন এবং যোগাযোগ করুন",
     "title1": "আপনার মেডিকেল রিপোর্ট আপনার নিজের ভাষায় বুঝুন",
@@ -66,6 +66,66 @@
   "children018": "০-১৮ বছর বয়সী শিশু।",
   "childrenAndPregnant": "শিশু ও গর্ভবতী মহিলা।",
   "pregnantWomenOnly": "গর্ভবতী মহিলা।",
-  "nutritionBeneficiaries": "শিশু, গর্ভবতী মহিলা ও স্তন্যদায়ী মা।"
+  "nutritionBeneficiaries": "শিশু, গর্ভবতী মহিলা ও স্তন্যদায়ী মা।",
+    "telemedicine": "টেলিমেডিসিন পরামর্শ",
+    "yourName": "আপনার নাম",
+    "describeIssue": "আপনার সমস্যা বর্ণনা করুন",
+    "requestConsultation": "পরামর্শ অনুরোধ করুন",
+    "yourConsultations": "আপনার পরামর্শ",
+    "userNotLoggedIn": "ব্যবহারকারী লগইন করেননি",
+    "fillAllFields": "দয়া করে সমস্ত ফিল্ড পূরণ করুন",
+    "userEmailNotFound": "ব্যবহারকারীর ইমেল পাওয়া যায়নি",
+    "consultationRequested": "পরামর্শ সফলভাবে অনুরোধ করা হয়েছে!",
+    "consultationAccepted": "পরামর্শ গৃহীত হয়েছে",
+    "consultationAcceptedDesc": "আপনার পরামর্শ গৃহীত হয়েছে। ফোন বা ভিডিওর মাধ্যমে সংযোগ করুন।",
+    "videoCallLaunchError": "ভিডিও কল শুরু করা যায়নি",
+    "pending": "মুলতুবি",
+    "accepted": "গৃহীত",
+    "completed": "সম্পন্ন",
+    "skills": "দক্ষতা",
+    "location": "অবস্থান",
+    "callNow": "এখন কল করুন",
+    "callNotSupported": "কল সমর্থিত নয়",
+    "errorMakingCall": "কল করতে ত্রুটি হয়েছে",
+  
+    "volunteerName1": "রমেশ কুমার",
+    "volunteerSkills1": "প্রাথমিক চিকিৎসা, বেসিক মেডিসিন",
+    "volunteerVillage1": "গ্রাম A, বিহার",
+  
+    "volunteerName2": "সুনিতা দেবী",
+    "volunteerSkills2": "মাতৃস্বাস্থ্য, শিশু যত্ন",
+    "volunteerVillage2": "গ্রাম B, উত্তর প্রদেশ",
+  
+    "volunteerName3": "অরুণ সিং",
+    "volunteerSkills3": "জরুরী প্রতিক্রিয়া, সিপিআর",
+    "volunteerVillage3": "গ্রাম C, রাজস্থান",
+  
+    "volunteerName4": "প্রিয়া শর্মা",
+    "volunteerSkills4": "সম্প্রদায় স্বাস্থ্য, পুষ্টি",
+    "volunteerVillage4": "গ্রাম D, মহারাষ্ট্র",
+  
+    "volunteerName5": "বিজয় পাটেল",
+    "volunteerSkills5": "প্রাথমিক চিকিৎসা, দুর্যোগ ব্যবস্থাপনা",
+    "volunteerVillage5": "গ্রাম E, গুজরাট",
+  
+    "volunteerName6": "অঞ্জলি গুপ্তা",
+    "volunteerSkills6": "স্বাস্থ্য শিক্ষা, টিকাদান",
+    "volunteerVillage6": "গ্রাম F, মধ্যপ্রদেশ",
+  
+    "volunteerName7": "রাজেশ যাদব",
+    "volunteerSkills7": "প্রাথমিক চিকিৎসা, ক্ষত যত্ন",
+    "volunteerVillage7": "গ্রাম G, হরিয়ানা",
+  
+    "volunteerName8": "কবিতা সিং",
+    "volunteerSkills8": "বৃদ্ধ যত্ন, ক্রনিক রোগ ব্যবস্থাপনা",
+    "volunteerVillage8": "গ্রাম H, পাঞ্জাব",
+  
+    "volunteerName9": "সুরেশ মেহতা",
+    "volunteerSkills9": "প্রাথমিক চিকিৎসা, জরুরী পরিবহন",
+    "volunteerVillage9": "গ্রাম I, কর্ণাটক",
+  
+    "volunteerName10": "মীনা কুমারী",
+    "volunteerSkills10": "মহিলা স্বাস্থ্য, পরিবার পরিকল্পনা",
+    "volunteerVillage10": "গ্রাম J, তামিলনাড়ু"
   }
   
