done with localization

--- a/assets/languages/bn.json
+++ b/assets/languages/bn.json
@@ -126,6 +126,9 @@
   
     "volunteerName10": "মীনা কুমারী",
     "volunteerSkills10": "মহিলা স্বাস্থ্য, পরিবার পরিকল্পনা",
-    "volunteerVillage10": "গ্রাম J, তামিলনাড়ু"
+    "volunteerVillage10": "গ্রাম J, তামিলনাড়ু",
+    "volunteerSupport2": "জরুরি ডাক্তার পরামর্শ",
+    "volunteerSupportDesc1": "কাছাকাছি এলাকার স্বেচ্ছাসেবকদের সংযুক্ত করে সহায়তা প্রদান ও পরিবর্তন আনা।"
+
   }
   
