--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -125,6 +125,8 @@
 
   "volunteerName10": "Meena Kumari",
   "volunteerSkills10": "Women's Health, Family Planning",
-  "volunteerVillage10": "Village J, Tamil Nadu"
+  "volunteerVillage10": "Village J, Tamil Nadu",
+  "volunteerSupport2": "Urgent Doctor Consultation",
+  "volunteerSupportDesc1": "Connecting volunteers in nearby areas to provide support and make a difference."
 }
 
