--- a/assets/languages/hi.json
+++ b/assets/languages/hi.json
@@ -145,6 +145,8 @@
   
   "volunteerName10": "मीना कुमारी",
   "volunteerSkills10": "महिला स्वास्थ्य, परिवार नियोजन",
-  "volunteerVillage10": "गाँव J, तमिल नाडु"
+  "volunteerVillage10": "गाँव J, तमिल नाडु",
+  "volunteerSupport2": "स्थानीय स्वयंसेवक कनेक्शन",
+  "volunteerSupportDesc1": "आसपास के क्षेत्रों में स्वयंसेवकों को जोड़कर सहायता प्रदान करना और बदलाव लाना।"
 
 }
