--- a/assets/languages/mr.json
+++ b/assets/languages/mr.json
@@ -126,7 +126,8 @@
     
       "volunteerName10": "मीना कुमारी",
       "volunteerSkills10": "स्त्री आरोग्य, कुटुंब नियोजन",
-      "volunteerVillage10": "गाव J, तमिळनाडू"
-  
+      "volunteerVillage10": "गाव J, तमिळनाडू",
+      "volunteerSupport2":"तातडीचा डॉक्टर सल्ला",
+      "volunteerSupportDesc1": "आजूबाजूच्या भागातील स्वयंसेवकांना जोडून मदत प्रदान करणे आणि बदल घडवणे."
   }
   
