--- a/assets/languages/hi.json
+++ b/assets/languages/hi.json
@@ -147,6 +147,25 @@
   "volunteerSkills10": "महिला स्वास्थ्य, परिवार नियोजन",
   "volunteerVillage10": "गाँव J, तमिल नाडु",
   "volunteerSupport2": "स्थानीय स्वयंसेवक कनेक्शन",
-  "volunteerSupportDesc1": "आसपास के क्षेत्रों में स्वयंसेवकों को जोड़कर सहायता प्रदान करना और बदलाव लाना।"
-
+  "volunteerSupportDesc1": "आसपास के क्षेत्रों में स्वयंसेवकों को जोड़कर सहायता प्रदान करना और बदलाव लाना।",
+  "ambulanceServices": "एम्बुलेंस सेवाएँ",
+  "hospitalLocator": "अस्पताल और एम्बुलेंस लोकेटर",
+      "name1": "जीवीके ईएमआरआई एम्बुलेंस",
+      "phone1": "108",
+      "location1": "पैन-इंडिया",
+      "name2": "केंद्रीकृत एम्बुलेंस सेवा",
+      "phone2": "102",
+      "location2": "पैन-इंडिया",
+      "name3": "निजी एम्बुलेंस सेवा - दिल्ली",
+      "phone3": "+919876543210",
+      "location3": "दिल्ली, भारत",
+      "name4": "एम्स अस्पताल",
+      "phone4": "+911126584567",
+      "location4": "नई दिल्ली, भारत",
+      "name5": "अपोलो अस्पताल",
+      "phone5": "+914442289000",
+      "location5": "चेन्नई, भारत",
+      "name6": "फोर्टिस अस्पताल",
+      "phone6": "+914033471717",
+      "location6": "बेंगलुरु, भारत"
 }
